# asselect_webapp

./: .gitattributes  .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  asselect.js  asselect_bg.wasm  asselect_neo-3b539be773145694.js  asselect_neo-3b539be773145694_bg.wasm  bulma-5de40b64e0cbf0a6.css  bulma-af8a89b0a629a9c2.css  bulma.css  bulma.sass  deploy.sh  index.html  overlay_105.txt  overlay_195.txt  overlay_atzdz.txt  package.json  yaixm.json
.github/workflows/: deploy.yml
assets/: openair.txt  overlay_195.txt  overlay_atzdz.txt  yaixm.json
default/: openair.txt
src/: components.rs  convert.rs  main.rs  state.rs  yaixm.rs
src/components/: about_tab.rs  airspace_tab.rs  extra_panel.rs  extra_tab.rs  notam_tab.rs  options_tab.rs  tabs.rs
